--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -39,7 +39,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     font-family: inherit;
     font-size: 14px;
 
-    &.expander.dropdown[checked] {
+    &.dropdown[checked] {
       border-radius: 4px 4px 0px 0px;
     }
 
@@ -62,6 +62,13 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
         color: $focused-color_text
       }
     }
+  }
+
+  &__expander {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 44px;
   }
 
   &__icon {
