--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -69,6 +69,8 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     top: 0px;
     width: 100%;
     height: 44px;
+    z-index: 24;
+    cursor: pointer;
   }
 
   &__icon {
@@ -78,6 +80,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
       bottom: 10px;
       right: 10px;
       background-color: $white;
+      z-index: 23;
 
       &::before {
         $beforeSize: 24px;
