Input is under reconstruction 4: refactored all odd and tricky things

--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -42,8 +42,8 @@ mixin input( item )
 
   - const widthByPercentClass = item.widthbypercent ? 'elem__width_' + item.widthbypercent : 'elem__width_100'
   - const expanderParentClass = readonly ? 'expander__parent' : ''
-  - const datePickerClasses = archetype === 'date-picker' ? 'adp-frame' : ''
-  - const dropdownClasses =   archetype === 'dropdown' ? 'dropdown' : ''
+  - const datePickerClasses = archetype === 'date-picker' ? 'expander adp-frame' : ''
+  - const dropdownClasses =   archetype === 'dropdown' ? 'expander dropdown' : ''
 
   - const frameClasses =  [ datePickerClasses, dropdownClasses ]
   - const parentClasses = [ widthByPercentClass, expanderParentClass ]
