--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -1,7 +1,7 @@
 include /components/material-icon-cell/material-icon-cell.pug
 include /components/button/__mean-oval/button__mean-oval.pug
 
-mixin inputDropdown( item={} )
+mixin inputDropdown( item )
   - const guestsOptionNames = [ 'взрослые', 'дети', 'младенцы' ]
   - const facilitiesOptionNames = [ 'спальни', 'кровати', 'ванные комнаты' ]
 
@@ -12,7 +12,6 @@ mixin inputDropdown( item={} )
   - const iconFlippedClass = dropdown.expanded ? 'icon_flipped' : ''
   - const expanderActiveClass = dropdown.expanded ? 'expander_active' : ''
 
-  .input__expander.expander
   .input__icon_expand( class=iconFlippedClass )
     +materialIcon('expand_more')
   .input__dropdown.expander__aim( class=expanderActiveClass data-options-type=dropdown.type )
