Input is under reconstruction 6: stylesheet fixes

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -29,7 +29,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
 
   &__frame {
     margin: 0;
-    padding: 0 34px 0 15px;
+    padding: 0 10 0 15px;
     height: 44px;
     width: inherit;
     border-radius: 4px;
@@ -37,7 +37,10 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     color: $focused-color_text;
     background-color: $white;
     font-family: inherit;
+    appearance: none;
     font-size: 14px;
+    z-index: 20;
+    user-select: none;
 
     &.dropdown[checked] {
       border-radius: 4px 4px 0px 0px;
@@ -71,7 +74,6 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
       bottom: 10px;
       right: 10px;
       background-color: $white;
-      z-index: 20;
 
       &::before {
         $fadeElementSize: 24px;
