--- a/src/components/input/_date-picker/input_date-picker.pug
+++ b/src/components/input/_date-picker/input_date-picker.pug
@@ -2,8 +2,8 @@ include /components/material-icon-cell/material-icon-cell.pug
 include /components/date-picker/date-picker.pug
 
 mixin inputDatePicker( item )
-  .input__icon_expand
-    +materialIcon('expand_more')
+  label.input__icon_expand( for=item.id)
+    +materialIcon('expand_more', item.id)
   .input__date-picker.expander__aim( class=item.hierarchy data-dates=item.dates )
     if ( item.hierarchy !== 'slave' )
       +datePicker( item.id )
