--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -40,7 +40,6 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     appearance: none;
     font-size: 14px;
     z-index: 20;
-    user-select: none;
 
     &.dropdown[checked] {
       border-radius: 4px 4px 0px 0px;
@@ -58,11 +57,12 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
       border-color: $focused-color_border-n-icon;
 
       &::placeholder {
-        color: $focused-color_text
+        color: $focused-color_text;
       }
 
       & + .input__icon_expand > .material-icons {
-        color: $focused-color_text
+        color: $focused-color_text;
+        cursor: pointer;
       }
     }
   }
@@ -74,6 +74,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
       bottom: 10px;
       right: 10px;
       background-color: $white;
+      cursor: pointer;
 
       &::before {
         $fadeElementSize: 24px;
