--- a/src/components/material-icon-cell/material-icon-cell.scss
+++ b/src/components/material-icon-cell/material-icon-cell.scss
@@ -12,3 +12,7 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
+
+label.material-icons {
+  user-select: none;
+}
