New favicon-bulk mixin is done, pages-callers of mixin is done

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -1,9 +1,9 @@
-include /pages/pages.pug
+include /components/favicons-bulk/favicons-bulk.pug
 include /components/logo/logo.pug
 
 head 
   block head
-  +pageFavicons()
+  +faviconsBulk()
 
 block body
   header.ui-kit__header
