--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -1,10 +1,10 @@
-include /pages/pages.pug
+include /components/favicons-bulk/favicons-bulk.pug
 include /components/footer/footer.pug
 include /components/header/header.pug
 
 head
   block head
-  +pageFavicons()
+  +faviconsBulk()
 
 body.website__body
   header.website__header
