--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,17 @@
 @import '@variables';
 
+@media screen and (max-width: 1160px) {
+  .website__footer_default {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1161px) {
+  .website__footer_mobile {
+    display: none;
+  }
+}
+
 .footer {
   &_default {
     height: 442px;
@@ -9,7 +21,7 @@
   &__sections {
     &_upper,
     &_lower {
-      background-color: #fff;
+      background-color: $white;
       box-sizing: border-box;
       display: flex;
       justify-content: center;
@@ -37,7 +49,7 @@
   }
 
   &__mobile-section {
-    background-color: #fff;
+    background-color: $white;
     flex-direction: column;
     height: 367px;
     max-width: 768px;
