--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,12 +1,12 @@
 @import '@variables';
 
-@media screen and (max-width: 1160px) {
+@media only screen and (max-width: 1160px) {
   .website__footer_default {
     display: none;
   }
 }
 
-@media screen and (min-width: 1161px) {
+@media only screen and (min-width: 1161px) {
   .website__footer_mobile {
     display: none;
   }
