--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -1,5 +1,25 @@
 @import "@variables";
 
+@media only screen and (max-width: 576px) {
+  
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
+@media only screen and (max-width: 992px) {
+  
+}
+
+@media only screen and (max-width: 1200px) {
+  
+}
+
+@media only screen and (max-width: 1920px) {
+  
+}
+
 .website {
   &__main,
   &__header,
