--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,12 +1,12 @@
 @import "@variables";
 
-@media only screen and (max-width: 1175px) {
+@media only screen and (max-width: 1200px) {
   .header__sections_desktop {
-    display: none;
+    display: none !important;
   }
 }
 
-@media only screen and (max-width: 1920px) {
+@media only screen and (min-width: 1201px) {
   .header__sections_mobile {
     display: none;
   }
@@ -18,12 +18,12 @@
   width: 100%;
   height: 70px;
   box-sizing: border-box;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-  background-color: white;
+  box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
+  background-color: $white;
   
   &,
   &__sections,
-  &__sections_right,
+  &__sections_desktop,
   &__user-bar {
     display: flex;
     align-items: center;
@@ -32,10 +32,8 @@
   &__sections {
     justify-content: space-between;
     width: 100%;
-    max-width: $wideFramesWidthMax;
-    min-width: $wideFramesWidthMin;
 
-    &_right {
+    &_desktop {
       display: grid;
       grid-gap: 20px;
       grid-template-columns: repeat(2, auto);
