--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -1,6 +1,6 @@
 @import "@variables";
 
-@media only screen and (max-width: 576px) {
+/*@media only screen and (max-width: 576px) {
   
 }
 
@@ -18,7 +18,7 @@
 
 @media only screen and (max-width: 1920px) {
   
-}
+}*/
 
 .website {
   &__main,
@@ -35,7 +35,6 @@
 
 .universal-container {
   position: relative;
-  min-width: $wideFramesWidthMin;
   max-width: $wideFramesWidthMax;
 }
 
