--- a/src/pages/website/__landing/website__landing.scss
+++ b/src/pages/website/__landing/website__landing.scss
@@ -1,7 +1,23 @@
+@media only screen and (max-width: 768px) {
+  .landing-page__bg-note {
+    padding-inline: 30px;
+    right: 0px;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .landing-page__bg-note {
+    padding-inline: 30px;
+    right: 150px;
+    width: 297px;
+    text-align: right;
+  }
+}
+
 .landing-page__bg-note {
   position: absolute;
   bottom: 18px;
   right: 0px;
-  width: 297px;
-  text-align: right;
 }
