--- a/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.scss
+++ b/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.scss
@@ -9,4 +9,15 @@
   & > .footer {
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   }
+
+  &__footer_default,
+  &__header_authorized,
+  &__header_non-authorized {
+    width: 100%;
+  }
+  
+  &__footer_mobile {
+    width: 768px;
+  }
+
 }
