--- a/src/pages/website/website.scss
+++ b/src/pages/website/website.scss
@@ -7,12 +7,17 @@
 @media only screen and (max-width: 698px) {
   .universal-container {
     width: unset;
+    padding-inline: 0;
   }
 }
 
 @media only screen and (min-width: 698px) {
   .universal-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
     width: 100%;
+    padding-inline: 150px;
   }
 }
 
@@ -43,7 +48,6 @@
 
 .universal-container {
   position: relative;
-  padding-inline: 150px;
 }
 
 .bg-pic {
