--- a/src/pages/website/__landing/website__landing.scss
+++ b/src/pages/website/__landing/website__landing.scss
@@ -1,6 +1,20 @@
+@media only screen and (max-width: 698px) {
+  .landing-page {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding-inline: 0;
+  }
+}
+
+@media only screen and (min-width: 698px) {
+  .landing-page {
+    padding-inline: 150px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .landing-page__bg-note {
-    padding-inline: 0;
     right: 0px;
     width: 100%;
     text-align: center;
@@ -9,15 +23,17 @@
 
 @media only screen and (min-width: 768px) {
   .landing-page__bg-note {
-    padding-inline: 150px;
     right: 150px;
     width: 297px;
     text-align: right;
   }
 }
 
-.landing-page__bg-note {
-  position: absolute;
-  bottom: 18px;
-  right: 0px;
+.landing-page {
+  width: 100%;
+
+  &__bg-note {
+    position: absolute;
+    bottom: 18px;
+  }
 }
