--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -5,6 +5,7 @@ include /components/header/header.pug
 head
   block head
   +faviconsBulk()
+  meta( name="viewport" content="width=device-width" )
 
 body.website__body
   header.website__header
