Continue responsive designing 2

--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -5,7 +5,7 @@ include /components/header/header.pug
 head
   block head
   +faviconsBulk()
-  meta( name="viewport" content="width=device-width" )
+  meta( name="viewport" content="width=380, initial-scale=1" )
 
 body.website__body
   header.website__header
