--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -27,6 +27,11 @@
     &__nav {
       display: none !important;
     }
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .header {
     &__sections_desktop {
       grid-template-columns: repeat(2, auto);
     }
