--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,11 +1,24 @@
 @import "@variables";
 
+@media only screen and (max-width: 382px) {
+  .card-style_default,
+  .card-style_room-sample {
+    border-radius: 0;
+  }
+}
+
+@media only screen and (min-width: 381px) {
+  .card-style_default,
+  .card-style_room-sample {
+    border-radius: 4px;
+  }
+}
+
 .card-style {
   &_default,
   &_room-sample {
     background-color: white;
     box-sizing: border-box;
-    border-radius: 4px;
   }
 
   &_default {
