--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -45,7 +45,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 60%;
+    padding-inline: 20%;
     height: 367px;
     background-color: $white;
 
