--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -25,8 +25,8 @@
     display: grid;
     grid-gap: 20px;
     padding: 39px 29px 29px 29px;
-    box-shadow: 0px 0px 25px rgba(black, .2);
-    border: 1px solid rgba(black, .12);
+    box-shadow: 0px 0px 25px rgba($black, .2);
+    border: 1px solid rgba($black, .12);
     width: 380px;
 
     & > * {
