--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -17,7 +17,7 @@
 .card-style {
   &_default,
   &_room-sample {
-    background-color: white;
+    background-color: $white;
     box-sizing: border-box;
   }
 
