room page is under responsive designing 3

--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -93,5 +93,5 @@ block main
             .room-page__title
               span.custom-font-style_h2 Отмена
             span.custom-font-style_body Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
-        .room-page__sub-section_right
-          +cardRoomBooking()
+          .room-page__booking-card
+            +cardRoomBooking()
