room page is under responsive designing 4

--- a/src/pages/website/__room/website__room.scss
+++ b/src/pages/website/__room/website__room.scss
@@ -1,5 +1,13 @@
 @import "@variables";
 
+@media only screen and (max-width: 860px) {
+  .room-page {
+    &__reviews {
+      display: none;
+    }
+  }
+}
+
 @media only screen and (min-width: 380px) {
   .room-page {
     &__sub-section_left {
@@ -7,7 +15,6 @@
         "f"
         "a"
         "b"
-        "c"
         "d"
         "e";
     }
