--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,14 +1,16 @@
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .index-links {
     flex-direction: column;
     align-items: center;
     gap: 60px;
+    width: 130px
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 767px) {
   .index-links{
     align-items: flex-start;
+    width: 50%;
   }
 }
 
@@ -19,7 +21,6 @@
 
 .index-links {
   justify-content: space-between;
-  width: 50%;
   max-width: 650px;
 
   &__container {
