--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -1,6 +1,6 @@
+@import "@variables";
 
-
-@media only screen and (min-width: 726px) {
+@media only screen and (min-width: 592px) {
   .search-page {
     &__filtered-items {
       &-grid {
@@ -10,11 +10,15 @@
   }
 }
 
-@media only screen and (max-width: 1008px) {
+@media only screen and (max-width: 928px) {
   .search-page {
     &__input-parameters {
       position: absolute;
       left: 0px;
+      padding-inline: 20px;
+      z-index: 100;
+      height: 900;
+      background-color: $white;
     }
   }
 }
