--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -7,8 +7,9 @@ block main
   include /components/card/__find-room/card__find-room.pug
 
   main.website__main.bg-pic__landing
-    .landing-page.universal-container
-      +cardFindRoom()
-
-      span.landing-page__bg-note.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
+    .landing-page
+      .landing-page__card-find-room
+        +cardFindRoom()
+      .landing-page__note
+        span.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
 
