Landing page is under reconstruction 2

--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -8,8 +8,6 @@ block main
 
   main.website__main.bg-pic__landing
     .landing-page
-      .landing-page__card-find-room
-        +cardFindRoom()
-      .landing-page__note
-        span.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
+      +cardFindRoom()
+      span.landing-page__bg-note.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
 
