--- a/src/pages/website/__landing/website__landing.scss
+++ b/src/pages/website/__landing/website__landing.scss
@@ -1,7 +1,6 @@
 @media only screen and (max-width: 782px) {
   .landing-page {
     &__note {
-      right: 0px;
       width: 100%;
       text-align: center;
     }
@@ -11,7 +10,6 @@
 @media only screen and (min-width: 782px) {
   .landing-page {
     &__note {
-      right: 150px;
       width: 297px;
       text-align: right;
     }
@@ -20,10 +18,6 @@
 
 @media only screen and (max-width: 675px) {
   .landing-page {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    position: relative;
     padding-inline: 0;
   }
 }
@@ -35,11 +29,19 @@
 }
 
 .landing-page {
+  display: block;
+  position: relative;
   width: 100%;
-  height: 100%;
+  min-height: inherit;
+
+  &__card,
+  &__note {
+    height: 50%;
+  }
 
   &__note {
     position: absolute;
     bottom: 18px;
+    right: 0px;
   }
 }
