Reset landing stylesheet to default because of major responsive issues

--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -8,6 +8,8 @@ block main
 
   main.website__main.bg-pic__landing
     .landing-page
-      +cardFindRoom()
-      span.landing-page__bg-note.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
+      .landing-page__card
+        +cardFindRoom()
+      .landing-page__note
+        span.custom-font-style_body Лучшие номера для вашей работы, отдыха и просто вдохновения
 
