--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -15,7 +15,7 @@
     &__input-parameters {
       position: absolute;
       left: 0px;
-      padding-inline: 20px;
+      padding: 20px 30px;
       z-index: 100;
       height: 900;
       background-color: $white;
@@ -43,7 +43,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin-top: 30px;
+  margin-block: 30px;
 
   &__input-parameters,
   &__filtered-items-grid {
@@ -67,8 +67,7 @@
     &-pagination {
       display: flex;
       justify-content: center;
-      margin-top: 41px;
-      margin-bottom: 70px;
+      margin-block: 40px;
     }
   }
 
