--- a/src/pages/website/__landing/website__landing.scss
+++ b/src/pages/website/__landing/website__landing.scss
@@ -1,4 +1,8 @@
-@media only screen and (max-width: 660px) {
+@import "@variables";
+
+$smoothTransformWidth: 660px;
+
+@media only screen and (max-width: $smoothTransformWidth) {
   .landing-page {
     padding-inline: 0;
     
@@ -13,7 +17,7 @@
   }
 }
 
-@media only screen and (min-width: 660px) {
+@media only screen and (min-width: $smoothTransformWidth) {
   .landing-page {
     padding-inline: 140px;
     
@@ -32,6 +36,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
+  max-width: $wideFramesWidthMax;
   padding-block: 70px 18px;
 
   &,
